# microvision

./: .gitignore  README.md  pyproject.toml
Yolo11/: MicroVision.yaml  README.md  track_and_save.py
YoloV7/: README.md  detect_or_track.py  sort_base.py
annotator_agreement/: multi_annotator_agreement.py  two_annotator_agreement.py
data/: README.md
data/agreement/a1/: 102.txt  1093.txt  1096.txt  1102.txt  1110.txt  1142.txt  1226.txt  1230.txt  1246.txt  1248.txt  1279.txt  1293.txt  1295.txt  1303.txt  1312.txt  1315.txt  1336.txt  1376.txt  1418.txt  2153.txt  2186.txt  2193.txt  2206.txt  2267.txt  2277.txt  2284.txt  2298.txt  2308.txt  2337.txt  2339.txt  2340.txt  2452.txt  2457.txt  2460.txt  2557.txt  2567.txt  2579.txt  2585.txt  2686.txt  2746.txt  (+218 more)
data/agreement/a2/: 102.txt  1093.txt  1096.txt  1102.txt  1110.txt  1142.txt  1226.txt  1230.txt  1246.txt  1248.txt  1279.txt  1293.txt  1295.txt  1303.txt  1312.txt  1315.txt  1336.txt  1376.txt  1418.txt  2153.txt  2186.txt  2193.txt  2206.txt  2267.txt  2277.txt  2284.txt  2298.txt  2308.txt  2337.txt  2339.txt  2340.txt  2452.txt  2457.txt  2460.txt  2557.txt  2567.txt  2579.txt  2585.txt  2686.txt  2746.txt  (+218 more)
data/agreement/a3/: 102.txt  1093.txt  1096.txt  1102.txt  1110.txt  1142.txt  1226.txt  1230.txt  1246.txt  1248.txt  1279.txt  1293.txt  1295.txt  1303.txt  1312.txt  1315.txt  1336.txt  1376.txt  1418.txt  2153.txt  (+238 more)
scripts/: agreement.py  split_data.py  yolo2coco.py
scripts/annotator_agreement/: annotator_agreement.py
src/microvision/: annotation.py  config.py  labels.py  plotting.py
