[project]
name = "microvision"
version = "0.0.1"
authors = [
  { name="Alexander Rasch", email="alexander.rasch@chalmers.se" },
  { name="Rahul Rajendra Pai", email="rahul.pai@chalmers.se" },
]
description = "Toolkit accompanying the MicroVision dataset"
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"