[project]
name = "microvision"
version = "0.1.0"
description = "Toolkit accompanying the MicroVision dataset"
readme = "README.md"
authors = [
  { name="Alexander Rasch", email="alexander.rasch@chalmers.se" },
  { name="Rahul Rajendra Pai", email="rahul.pai@chalmers.se" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "supervision>=0.27.0",
]

[project.scripts]
microvision = "microvision:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
